test/fixtures/render_basic_snapshot_nonumber.txt
# title                 
                        
foo                     
bar 日本語 編集         
baz                     
~                       
-- NORMAL -- [No Na 1:1 
